log

Sun 13 Aug 2023 12:02:58 AM UTC: 
 tests:  0|7
total_score: 0/70
13ff67c
Tue 15 Aug 2023 08:21:16 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:15:5: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   15 |     scanf("%i",&arr[i]);
      |     ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
093fc01
Tue 15 Aug 2023 08:23:36 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:21:13: error: passing argument 1 of ‘printf’ makes pointer from integer without a cast [-Werror=int-conversion]
   21 |   printf(arr[0]);
      |          ~~~^~~
      |             |
      |             int
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdio.h:906,
                 from exercises.c:3,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/bits/stdio2.h:84:32: note: expected ‘const char * restrict’ but argument is of type ‘int’
   84 | printf (const char *__restrict __fmt, ...)
      |         ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
In file included from test.c:1:
exercises.c:21:3: error: format not a string literal and no format arguments [-Werror=format-security]
   21 |   printf(arr[0]);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3858932
Tue 15 Aug 2023 08:25:14 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
9066748
Tue 15 Aug 2023 08:25:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
4ad1c3a
Tue 15 Aug 2023 08:26:44 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
693f63b
Tue 15 Aug 2023 08:27:07 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|7
total_score: 0/70
cf7d0e6
Tue 15 Aug 2023 08:31:29 PM UTC: 
 exercises.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|7
total_score: 0/70
a0d56dd
Tue 15 Aug 2023 08:31:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
ed1e39c
Tue 15 Aug 2023 08:32:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5969334
Tue 15 Aug 2023 08:48:19 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
81ec8a3
Tue 15 Aug 2023 08:57:51 PM UTC: 
 exercises.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 10/70
3c49587
Tue 15 Aug 2023 09:05:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
90cf740
Tue 15 Aug 2023 09:05:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
03025f2
Tue 15 Aug 2023 09:06:36 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 10/70
04d8ac3
Tue 15 Aug 2023 09:09:43 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
49272a8
Tue 15 Aug 2023 09:10:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:42:14: error: expected expression before ‘]’ token
   42 |   return arr[];
      |              ^
exercises.c:42:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   42 |   return arr[];
      |          ^~~
exercises.c:31:6: note: declared here
   31 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf2331b
Tue 15 Aug 2023 09:10:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:42:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   42 |   return arr;
      |          ^~~
exercises.c:31:6: note: declared here
   31 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
45fcdfa
Tue 15 Aug 2023 09:10:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f1208fe
Tue 15 Aug 2023 09:11:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
88d045d
Tue 15 Aug 2023 09:13:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
75a54a8
Tue 15 Aug 2023 11:44:08 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:7: error: value computed is not used [-Werror=unused-value]
   54 |       *newSize++;
      |       ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2acf17
Tue 15 Aug 2023 11:44:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
a7c86b6
Tue 15 Aug 2023 11:56:43 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
6395238
Tue 15 Aug 2023 11:57:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:61:5: error: ‘*nuevo_23 + _9’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |     printf("%i",nuevo[i]);
      |     ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a6b6467
